--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -11,7 +11,7 @@
 				<div class="col-md-4">
 
 					<!-- <!% if current_user.image.exists? %> -->
-					<%= link_to image_tag current_user.image.url(:thumb), class: "thumb-image-home" %>
+						<%= image_tag current_user.image.url(:thumb), class: "thumb-image-home" %>
 					<!-- <!% else %> -->
 						<!-- <!%= form_for current_user, html: { multipart: true } do |f| %>
 							<!%= f.file_field :image %>
@@ -22,13 +22,17 @@
 					<div id="user-info-img-uploader">
 		            	<li class="text-center">
 		            		<span>Upload photo</span>
-		            		<%= form_for current_user, html: { multipart: true } do |f| %>
-								<%= f.file_field :image, id: 'choose-photo-btn' %>
-								<%= f.submit :image, id: 'choose-photo-submit-btn' %>
-							<% end %>
 		            	</li>
 		            	<li class="text-center"><span>Cancel</span></li>
 		            </div>
+					
+					<%= form_for current_user, html: { multipart: true } do |f| %>
+						<%= f.file_field :image, id: 'choose-photo-btn' %>
+						<%= f.submit :upload, id: 'choose-photo-submit-btn' %>
+					<% end %>
+
+	            	<%= render 'image_preview' %>
+
 
 				</div>
 				<div class="col-md-8" id="user-info-user-name">
