--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,9 +2,18 @@
 	<div class="row">
 		<div class="col-md-3" id="user-info">
 			<div class="row">
-				<%= link_to user_path(current_user) do  %>
-					<%= image_tag current_user.image.url(:medium), class: "medium-image" %>
-				<% end %>
+				<% if current_user.bigger_image.exists? %>
+                	<%= link_to user_path(current_user) do  %>
+						<%= image_tag current_user.bigger_image.url(:large), class: "medium-image" %>
+					<% end %>
+              	<% else %>
+					<!-- <!%= link_to '', user_path(current_user) %> -->
+
+					<%= form_for current_user, html: { multipart: true } do |f| %>
+						<%= f.file_field :bigger_image %>
+						<%= f.submit :bigger_image_upload %>
+					<% end %>
+				<% end %>              	
 			</div>
 
 			<div class="row">
