--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -7,12 +7,7 @@
 						<%= image_tag current_user.bigger_image.url(:large), class: "medium-image" %>
 					<% end %>
               	<% else %>
-					<!-- <!%= link_to '', user_path(current_user) %> -->
-
-					<%= form_for current_user, html: { multipart: true } do |f| %>
-						<%= f.file_field :bigger_image %>
-						<%= f.submit :bigger_image_upload %>
-					<% end %>
+					<%= link_to '', user_path(current_user) %>
 				<% end %>              	
 			</div>
 
