--- a/app/assets/stylesheets/home_tweet_creation.scss
+++ b/app/assets/stylesheets/home_tweet_creation.scss
@@ -7,10 +7,28 @@
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 
-	div:nth-child(3) div:nth-child(1) {
-		position: relative;
-		top: 13px;
-		right: 10px;
+	div:last-child {
+				
+		div {
+			position: relative;
+			top: 13px;
+			right: 10px;
+		}
+
+		span {
+			font-size: 25px;
+			left: 76px;
+			top: 6px;
+			padding: 5px 9px 5px 9px;
+			border-radius: 5px;
+			color: #2e9bc3;
+
+			&:hover {
+				cursor: pointer;
+				border: 1px solid #2e9bc3;
+				padding: 4px 8px 4px 8px;
+			}
+		}
 	}
 }
 
