--- a/app/views/tweets/_tweet_creation.erb
+++ b/app/views/tweets/_tweet_creation.erb
@@ -12,7 +12,10 @@
 		</div>
 
 		<div class="row">
-			<div class="col-md-4 col-md-offset-8">
+			<div class="col-md-6">
+				<span class="glyphicon glyphicon-camera"></span>
+			</div>
+			<div class="col-md-6">
 				<%= f.submit 'Tweet', class: 'btn btn-info', id: 'tweet-btn' %>
 				<div id="counter">140</div>
 			</div>
