Finish implmenting photo upload for tweets

--- a/app/assets/stylesheets/home_user_info.scss
+++ b/app/assets/stylesheets/home_user_info.scss
@@ -9,6 +9,8 @@
 	div.row:first-child {
 		min-height: 96px;
 		background-color: #1DA1F2;
+		border-top-left-radius: 4px;
+		border-top-right-radius: 4px;
 
 		a {
 			display: block !important;
