--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -62,7 +62,7 @@
 		</div>
 
 		<div class="col-md-6">
-			<div class="row">
+			<div class="row" id="tweet-area-div">
 				<%= render 'tweet_creation' %>
 			</div>
 			<% @tweets.each do |tweet| %>
