--- a/app/assets/stylesheets/home_tweet_creation.scss
+++ b/app/assets/stylesheets/home_tweet_creation.scss
@@ -3,7 +3,6 @@
 	height: 58px;
 	background-color: #E8F5FD;
 	width: 585px;
-	margin-left: 0px;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 }
@@ -31,9 +30,7 @@
 			}			
 		}
 
-		input {
-			display: none;
-		}
+		input {	display: none; }
 	}
 
 	div:last-child {
@@ -43,7 +40,7 @@
 
 		#tweet-btn {
 			float: right;
-			margin-top: 5px;
+			margin: 5px 18px 0px 0px;
 			height: 38px;
 			width: 97px;
 			display: none;
@@ -65,7 +62,7 @@
 	$placeholder-line-height: 1.5em;
 
 	height: 36px;
-	width: 506px;
+	width: 513px;
 	position: relative;
 	left: -45px;
 	top: 9px;
@@ -98,11 +95,25 @@
 #tweet-area-attachments {
 	background-color: #f1f1f1;
 	border: 1px solid #A4D9F9;
-	width: 506px;
+	width: 513px;
 	height: 164px;
 	position: relative;
-	left: 82px;
+	left: 87px;
 	top: 88px;
 	border-radius: 0px 0px 2px 2px;
 	display: none;
+
+	#remove-photo {
+		border: solid black 1px;
+		background-color: black;
+		color: white;
+		font-size: 14px;
+		border-radius: 11px;
+		padding: 1px 1px 0px 1px;
+		position: absolute;
+		left: 104px;
+		top: 12px;
+		z-index: 1;
+		cursor: pointer;
+	}
 }
