--- a/app/views/tweets/_tweet_creation.erb
+++ b/app/views/tweets/_tweet_creation.erb
@@ -1,5 +1,5 @@
-<%= form_for @tweet do |f| %>
-	<div class="row" id="tweet-area-div">
+ <%= form_for @tweet, html: { multipart: true } do |f| %>
+	<div class="row">
 		<div class="col-md-2">
 			<% if current_user.image.exists? %>
             	<%= image_tag current_user.image.url(:thumb), id: "tweet-creation-box-image-user" %>
@@ -12,17 +12,14 @@
 		</div>
 
 		<div class="row" id="tweet-area-attachments">
+			<span class="glyphicon glyphicon-remove" id="remove-photo"></span>
 			<img id="tweet-area-attachments-target" src="#" />
 		</div>
 
 		<div class="row" id="tweet-area-options">
 			<div class="col-md-6">
 				<span class="glyphicon glyphicon-camera" id="camera"></span>
-
-				<%= form_for current_user, html: { multipart: true } do |f| %>
-					<%= f.file_field :photo, id: 'tweet-creaton-choose-photo-btn' %>
-					<%= f.submit :upload, id: 'tweet-creaton-choose-photo-submit-btn' %>
-				<% end %>
+				<%= f.file_field :photo, id: 'tweet-creaton-choose-photo-btn' %>
 			</div>
 			<div class="col-md-6">
 				<%= f.submit 'Tweet', class: 'btn btn-info', id: 'tweet-btn' %>
