--- a/app/assets/stylesheets/home_feed.scss
+++ b/app/assets/stylesheets/home_feed.scss
@@ -19,3 +19,15 @@
 		bottom: 8px;
 	}
 }
+
+.feed-image {
+	height: 48px;
+	width: 48px;
+	position: relative;
+	bottom: -10px;
+	left: -5px;
+	border-radius: 5px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
