--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,7 +1,9 @@
 #image_header {
-	height: 400px;
-	width: 100%;
+	height: 420px;
 	margin-top: -21px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 }
 
 .feed p{
