--- a/app/views/users/_show_partial.erb
+++ b/app/views/users/_show_partial.erb
@@ -1,6 +1,4 @@
-<div class="row">
-	<%= image_tag @user.image.url(:large), id: "image_header" %>
-</div>
+<div class="row" id="image_header" style="background-image: url(<%= @user.bigger_image.url(:large) %>);" ></div>
 
 <div class="row info-bar-border">
 	<div class="col-md-4 col-md-offset-4">
