--- a/app/views/tweets/_image_preview.html.erb
+++ b/app/views/tweets/_image_preview.html.erb
@@ -6,7 +6,7 @@
         <h4 class="modal-title">Do you want to upload this photo ?</h4>
       </div>
       <div class="modal-body">
-        <img id="img-target" src="#" />
+        <div id="img-target"></div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
