--- a/app/assets/stylesheets/home_user_info.scss
+++ b/app/assets/stylesheets/home_user_info.scss
@@ -141,3 +141,11 @@
 #choose-photo-btn, #choose-photo-submit-btn{
 	display: none;
 }
+
+#img-target {
+	height: 450px;
+	width: 568px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
