--- a/app/views/tweets/_tweet_creation.erb
+++ b/app/views/tweets/_tweet_creation.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-2">
 			<% if current_user.image.exists? %>
-            	<%= image_tag current_user.image.url(:thumb), id: "tweet-creation-box-image-user" %>
+            	<div id="tweet-creation-box-image-user" style="background-image: url(<%= current_user.image.url(:thumb) %>);"></div>
             <% else %>
             	<%= image_tag("owl.png", id: "tweet-creation-box-image-owl") %>
             <% end %>
@@ -12,8 +12,9 @@
 		</div>
 
 		<div class="row" id="tweet-area-attachments">
-			<span class="glyphicon glyphicon-remove" id="remove-photo"></span>
-			<img id="tweet-area-attachments-target" src="#" />
+			<div id="tweet-area-attachments-target">
+				<span class="glyphicon glyphicon-remove" id="remove-photo"></span>
+			</div>
 		</div>
 
 		<div class="row" id="tweet-area-options">
