Show tweets photos on tweet feed

--- a/app/assets/stylesheets/home_feed.scss
+++ b/app/assets/stylesheets/home_feed.scss
@@ -31,3 +31,15 @@
 	background-position: center;
 	background-size: cover;
 }
+
+.tweet-images {
+	height: 336px;
+	width: 504px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	position: relative;
+	right: 29px;
+	border-radius: 5px;
+	margin-bottom: 45px;
+}
