--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -82,6 +82,10 @@
 						</div>
 						<div class="row">
 							<p><%= tweet.body %></p>
+
+							<% if tweet.photo.exists? %>
+			                	<div class="tweet-images" style="background-image: url(<%= tweet.photo.url(:medium) %>);"></div>
+							<% end %>
 						</div>
 					</div>
 				</div>
