--- a/app/assets/stylesheets/home_feed.scss
+++ b/app/assets/stylesheets/home_feed.scss
@@ -27,6 +27,7 @@
 	bottom: -10px;
 	left: -5px;
 	border-radius: 5px;
+	background-color: #eee;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
