--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,9 @@
       </div>
     <% end %>
 
+    <% if flash[:msg] %>
+      <div class="msg"><%= flash[:msg] %></div>
+    <% end %>
     <%= yield %>
 
 
