--- a/app/assets/stylesheets/home_user_info_hover.scss
+++ b/app/assets/stylesheets/home_user_info_hover.scss
@@ -10,25 +10,30 @@
 	top: 60px;
 }
 
-// .upper-part {
-// 	min-height: 96px;
-// 	border-top-left-radius: 4px;
-// 	border-top-right-radius: 4px;
+#user-info-hover-owl {
+	height: 72px;
+	width: 72px;
+	border: solid 3px white;
+	cursor: pointer;
+	position: relative;
+	bottom: 25px;
+	left: -5px;
+	border-radius: 7px;
+	background-color: #1b95e0;
+}
 
-// 	a {
-// 		display: block !important;
-// 		height: 96px;
-// 	}
-// }
+#user-info--hover-user-name {
+	position: relative;
+	right: 20px;
+	
+	h4 a {
+		color: black;
+	}
 
-// #upper-part-no-img {
-// 	@extend .upper-part;
-// 	background-color: #1DA1F2;
-// }
-
-// #upper-part-with-img {
-// 	@extend .upper-part;
-// 	background-repeat: no-repeat;
-// 	background-position: center;
-// 	background-size: cover;
-// }
+	h6 a{
+		position: relative;
+		bottom: 5px;
+		left: 30px;
+		color: #707e88;
+	}
+}
