--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -39,7 +39,7 @@ body {
 	position: absolute;
 	z-index: 10;
 	left: 25%;
-	bottom: 86%;
+	bottom: 956px;
 	border-bottom-left-radius: 7px;
 	border-bottom-right-radius: 7px;
 }
