Fixing show view

--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -40,3 +40,12 @@ $border: solid 3px white;
 	float: right;
 	margin-right: 495px;
 }
+
+#image_header {
+	height: 600px;
+	margin-top: -21px;
+	background-color: #1DA1F2;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
