--- a/app/views/users/_show_partial.erb
+++ b/app/views/users/_show_partial.erb
@@ -1,20 +1,44 @@
 <div class="row" id="image_header" style="background-image: url(<%= @user.bigger_image.url(:large) %>);" ></div>
 
 <div class="row info-bar-border">
-	<div class="col-md-4 col-md-offset-4">
-		<div class="col-md-4 info-bar-width-height-padding <%= current_page?(user_path) ? "info-bar-border-color" : "info-bar-hover" %>">
-			<h4 class="text-center"><%= link_to 'tweets', user_path(), class: "info-bar-link" %></h4>
-			<h5 class="margin-show-view text-center"><%= @user.tweets.count %></h5>
+	
+	<!-- <div class="col-md-4">
+		<div id="medium-user-profile-image">
+			<span><!%= link_to image_tag @user.image.url(:medium), class: "img-thumbnail" %></span>
+			<h3><!%= @user.fullname %></h3>
+			<h4><!%= @user.username %></h4>
+			<br>
+			<h4>Joined <!%= @user.created_at.strftime("%B") %> <!%= @user.created_at.year %></h4>
 		</div>
-		<div class="col-md-4 info-bar-width-height-padding <%= current_page?(show_following_path) ? "info-bar-border-color" : "info-bar-hover" %>">
-			<h4 class="text-center"><%= link_to 'following', show_following_path(), class: "info-bar-link" %></h4>
-			<h5 class="margin-show-view text-center"><%= @user.follows.count %></h5>
-		</div>
-		<div class="col-md-4 info-bar-width-height-padding <%= current_page?(show_followers_path) ? "info-bar-border-color" : "info-bar-hover" %>">
-			<h4 class="text-center"><%= link_to 'followers', show_followers_path(), class: "info-bar-link" %></h4>
-			<h5 class="margin-show-view text-center"><%= @user.followers.count %></h5>
+	</div> -->
+
+	<div class="col-md-4">
+		<div id="user-info-show">
+			<div style="background-image: url(<%= @user.image.url(:medium) %>);"></div>
+			<h4><%= @user.fullname %></h4>
+			<h5><%= @user.username %></h5>
+			<br>
+			<h5>Joined <%= @user.created_at.strftime("%B") %> <%= @user.created_at.year %></h5>
 		</div>
 	</div>
+
+	<div class="col-md-4" id="info-bar">
+		<div class="col-md-4 <%= current_page?(user_path) ? "info-bar-border-color" : "info-bar-hover" %>">
+			<h4 class="text-center"><%= link_to 'tweets', user_path(), class: "info-bar-link" %></h4>
+			<h3 class="text-center"><%= @user.tweets.count %></h3>
+		</div>
+		
+		<div class="col-md-4 <%= current_page?(show_following_path) ? "info-bar-border-color" : "info-bar-hover" %>">
+			<h4 class="text-center"><%= link_to 'following', show_following_path(), class: "info-bar-link" %></h4>
+			<h3 class="text-center"><%= @user.follows.count %></h3>
+		</div>
+		
+		<div class="col-md-4 <%= current_page?(show_followers_path) ? "info-bar-border-color" : "info-bar-hover" %>">
+			<h4 class="text-center"><%= link_to 'followers', show_followers_path(), class: "info-bar-link" %></h4>
+			<h3 class="text-center"><%= @user.followers.count %></h3>
+		</div>
+	</div>
+
 	<div class="col-md-4 friendship-button">
 		<% if current_user.id == @user.id %>
 			<button class="btn btn-default show-friendship-button">Edit Profile</button>
@@ -22,15 +46,5 @@
 			<%= button_to get_actions(@user.id), handle_friendship_path(:user_id => @user.id), remote: true, class: "btn btn-default friendship-button-b show-friendship-button" %>
 		<% end %>
 	</div>
-</div>
 
-<div class="row">
-	<div class="col-md-4">
-		<div id="medium-user-profile-image">
-			<span><%= link_to image_tag @user.image.url(:medium), class: "img-thumbnail" %></span>
-			<h3><%= @user.fullname %></h3>
-			<h4><%= @user.username %></h4>
-			<br>
-			<h4>Joined <%= @user.created_at.strftime("%B") %> <%= @user.created_at.year %></h4>
-		</div>
-	</div>
+</div>
