--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,31 @@
 <%= render 'show_partial' %>
 
-	<div class="col-md-4 feed">
+<div class="row">
+	<div class="col-md-4 col-md-offset-4">
 		<% @user.tweets.order(created_at: :desc).each do |tweet| %>
-			<h6><strong><%= tweet.user.fullname %></strong> <%= tweet.user.username %> <%= time_ago_in_words(tweet.created_at) %> ago</h6>
-				<p><%= tweet.body %></p>
+			<div class="row feed">
+				<div class="col-md-2">
+					<%= link_to user_path(tweet.user) do  %>
+						<div class="feed-image" style="background-image: url(<%= tweet.user.image.url(:thumb) %>);"></div>
+					<% end %>
+				</div>
+				<div class="col-md-10">
+					<div class="row">
+						<h6>
+							<strong><%= tweet.user.fullname %></strong>
+							<%= tweet.user.username %>
+							<%= time_ago_in_words(tweet.created_at) %> ago
+						</h6>
+					</div>
+					<div class="row">
+						<p><%= tweet.body %></p>
 
-				<% if tweet.photo.exists? %>
-                	<%= image_tag tweet.photo.url(:medium) %>
-				<% end %> 
+						<% if tweet.photo.exists? %>
+		                	<div class="tweet-images" style="background-image: url(<%= tweet.photo.url(:large) %>);"></div>
+						<% end %>
+					</div>
+				</div>
+			</div>
 		<% end %>
 	</div>
-
 </div>
