Implementing overlay on user show

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -2,6 +2,7 @@
 	border-bottom: 1px solid rgba(0,0,0,0.15);
 	margin-bottom: 10px;
 	height: 46px;
+	z-index: 1;
 
 	div>ul:nth-child(1) a:hover {
 		color: #1b95e0;
