--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,8 @@
   <body>
     
     <% if user_signed_in? %>
+      <div id="overlay"></div>
+
       <div class="navbar navbar-default navbar-fixed-top navbar-custom">
         <div class="container">
 
