--- a/app/views/users/_show_partial.erb
+++ b/app/views/users/_show_partial.erb
@@ -2,6 +2,18 @@
 	<div id="image-header-edit"></div>
 	<span class="glyphicon glyphicon-camera"></span>
 	<h3>Change your header photo</h3>
+
+	<div id="image-header-img-uploader">
+    	<li class="text-center"><h5>Upload photo</h5></li>
+    	<li class="text-center"><h5>Remove</h5></li>
+    	<li></li>
+    	<li class="text-center"><h5>Cancel</h5></li>
+    </div>
+	
+	<%= form_for current_user, html: { multipart: true } do |f| %>
+		<%= f.file_field :bigger_image, id: 'choose-photo-btn-img-header' %>
+		<%= f.submit :upload, id: 'choose-photo-submit-btn-img-header' %>
+	<% end %>
 </div>
 
 <div class="row info-bar-border">
