--- a/app/assets/stylesheets/show_user.scss
+++ b/app/assets/stylesheets/show_user.scss
@@ -41,7 +41,7 @@
 		font-size: 50px;
 		color: white;
 		position: absolute;
-    	left: 40%;
+    	left: 36%;
     	top: 16%;
     	display: none;
 
@@ -51,7 +51,7 @@
 	h3 {
 		color: white;
 		position: absolute;
-    	left: 17%;
+    	left: 14%;
     	top: 23%;
     	font-weight: bold;
     	display: none;
@@ -148,7 +148,6 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-	position: relative;
 	z-index: 998;
 
 	#image-header-edit {
@@ -248,6 +247,22 @@
 		    margin-bottom: 4px;
 		}
 
+		&:nth-child(2) {
+			padding: 0px;
+
+			a {
+				color: #707e88;
+				display: block;
+				padding: 8px;
+
+				&:hover{
+				    background-color: #1b95e0;
+				    color: white;
+				    text-decoration: none;
+				}
+			}
+		}
+
 		&:hover { 
 			background-color: #1b95e0;
 			color: white;
@@ -255,6 +270,56 @@
 	}
 }
 
-#choose-photo-btn-img-header, #choose-photo-submit-btn-img-header {
+#choose-photo-btn-img-header, #choose-photo-submit-btn-img-header, #choose-photo-btn-user-profile-img, #choose-photo-submit-btn-user-profile-img {
 	display: none;
+}
+
+
+#show-user-profile-img-uploader {
+	position: absolute;
+	width: 220px;
+	top: 140px;
+    right: 1px;
+	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+	border: 1px #eee solid;
+	background-color: white;
+	border-radius: 4px;
+	padding-top: 4px;
+	padding-bottom: 4px;
+	z-index: 1;
+	color: #707e88;
+	cursor: pointer;
+	display: none;
+
+	&:after { @include arrow-on-top(-9px, 95px, #FFFFFF); }
+
+	&:before { @include arrow-on-top(-10px, 95px, #eee); }
+
+	li {
+		list-style: none;
+		margin-top: 0px;
+    	padding-top: 1px;
+    	padding-bottom: 1px;
+
+		&:nth-child(3) {
+			border-bottom: 1px solid #eee;
+		    margin-top: 3px;
+		    margin-bottom: 4px;
+		}
+
+		&:hover { 
+			background-color: #1b95e0;
+			color: white;
+		}
+	}
+}
+
+#feed-position {
+
+	>div:first-child {
+		margin-top: 10px;
+		border-top: solid 1px #eee;
+		border-top-left-radius: 5px;
+		border-top-right-radius: 5px;
+	}
 }
