--- a/app/views/users/_show_partial.erb
+++ b/app/views/users/_show_partial.erb
@@ -5,7 +5,9 @@
 
 	<div id="image-header-img-uploader">
     	<li class="text-center"><h5>Upload photo</h5></li>
-    	<li class="text-center"><h5>Remove</h5></li>
+    	<li class="text-center">
+    		<%= link_to "Remove", user_update_path, :method => :delete %>
+    	</li>
     	<li></li>
     	<li class="text-center"><h5>Cancel</h5></li>
     </div>
@@ -27,6 +29,18 @@
 			<div id="user-info-show-edit"></div>
 			<span class="glyphicon glyphicon-camera"></span>
 			<h3>Change your profile photo</h3>
+
+			<div id="show-user-profile-img-uploader">
+		    	<li class="text-center"><h5>Upload photo</h5></li>
+		    	<li class="text-center"><h5>Remove</h5></li>
+		    	<li></li>
+		    	<li class="text-center"><h5>Cancel</h5></li>
+		    </div>
+			
+			<%= form_for current_user, html: { multipart: true } do |f| %>
+				<%= f.file_field :image, id: 'choose-photo-btn-user-profile-img' %>
+				<%= f.submit :upload, id: 'choose-photo-submit-btn-user-profile-img' %>
+			<% end %>
 		</div>
 	</div>
 
