--- a/app/assets/stylesheets/show_user.scss
+++ b/app/assets/stylesheets/show_user.scss
@@ -22,6 +22,7 @@
     left: 430px;
     top: -105px;
     z-index: 999;
+
     
     > :first-child {
 	    height: 210px;
@@ -31,6 +32,7 @@
 		background-size: cover;
 		border-radius: 12px;
 	    border: 5px solid white;
+	    background-color: #eee;
 	}
 
 	h4 { font-weight: bold;	}
@@ -215,11 +217,9 @@
     content: "";
 }
 
-#image-header-img-uploader {
+.img-uploader {
 	position: absolute;
 	width: 220px;
-	top: 500px;
-	right: 899px;
 	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 	border: 1px #eee solid;
 	background-color: white;
@@ -270,48 +270,20 @@
 	}
 }
 
-#choose-photo-btn-img-header, #choose-photo-submit-btn-img-header, #choose-photo-btn-user-profile-img, #choose-photo-submit-btn-user-profile-img {
-	display: none;
+#image-header-img-uploader {
+	@extend .img-uploader;
+	right: 899px;
+	top: 500px;
 }
 
-
 #show-user-profile-img-uploader {
-	position: absolute;
-	width: 220px;
-	top: 140px;
+	@extend .img-uploader;
     right: 1px;
-	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-	border: 1px #eee solid;
-	background-color: white;
-	border-radius: 4px;
-	padding-top: 4px;
-	padding-bottom: 4px;
-	z-index: 1;
-	color: #707e88;
-	cursor: pointer;
+    top: 140px;
+}
+
+#choose-photo-btn-img-header, #choose-photo-submit-btn-img-header, #choose-photo-btn-user-profile-img, #choose-photo-submit-btn-user-profile-img {
 	display: none;
-
-	&:after { @include arrow-on-top(-9px, 95px, #FFFFFF); }
-
-	&:before { @include arrow-on-top(-10px, 95px, #eee); }
-
-	li {
-		list-style: none;
-		margin-top: 0px;
-    	padding-top: 1px;
-    	padding-bottom: 1px;
-
-		&:nth-child(3) {
-			border-bottom: 1px solid #eee;
-		    margin-top: 3px;
-		    margin-bottom: 4px;
-		}
-
-		&:hover { 
-			background-color: #1b95e0;
-			color: white;
-		}
-	}
 }
 
 #feed-position {
