--- a/app/views/users/show_followers.html.erb
+++ b/app/views/users/show_followers.html.erb
@@ -1,24 +1,24 @@
 <%= render 'show_partial' %>
 
-	<div class="col-md-8">
+<div class="row">
+	<div class="col-md-6 col-md-offset-4" id="show-user-following-position">
 		<% @user.followers.each do |f| %>
 			<% if f.is_followed_by %>
 				<div class="col-md-4 show-following">
 					<% user = find_user(f.is_followed_by) %>
 					<div class="row">
-						<%= image_tag user.image.url(:large), class: "medium-image" %>
+						<div class="upper-part-with-img" style="background-image: url(<%= user.bigger_image.url(:large) if user.bigger_image.exists? %>);"></div>
 					</div>
 					<div class="row friendship-button">
-						<%= image_tag user.image.url(:thumb), class: "thumb-image" %>
-						<%= button_to get_actions(user.id), handle_friendship_path(:user_id => user.id), remote: true, class: "btn btn-default show-following-friendship-button" %>
+						<div id="show-user-following-small-img" style="background-image: url(<%= user.image.url(:medium) if user.image.exists? %>);"></div>
+						<%= button_to get_actions(user.id), handle_friendship_path(:user_id => user.id), remote: true, class: "btn btn-default friendship-button-b show-following-friendship-button" %>
 					</div>
 					<div class="row show-following-username">
 						<h4><strong><%= user.fullname %></strong></h4>
-						<h5><%= user.username %></h5>
+						<h6><%= user.username %></h6>
 					</div>
 				</div>
 			<% end %>
 		<% end %>
 	</div>
-
 </div>
